@@ -1,14 +1,20 @@
 SYNOPSIS
         object present(mixed str);
-        object present(mixed str, object ob);
+        object present(mixed str, int n)
+        object present(mixed str, object ob)
+        object present(mixed str, int n, object ob)
 
 BESCHREIBUNG
         Wenn ein Objekt mit der Id <str> sich im Inventar oder in der Umgebung
-        von this_object() befindet, wird es zurueck geliefert. Wenn <str> die
-        Form "<id> <n>" hat, wird das n-te Objekt mit Namen <id> zurueck
-        geliefert. Das heisst, der Driver fuehrt fuer alle Objekte im Inventar
-        und in der Umgebung von this_object() die Funktion id(str) aus, bis
-        ein Treffer erzielt wird (wenn ueberhaupt).
+        von this_object() befindet, wird es zurueck geliefert.
+        
+        Ist das Argument <n> gegeben, wird das n-te Objekt mit Namen <id>
+        zurueck geliefert. Das heisst, der Driver fuehrt fuer alle Objekte
+        im Inventar und in der Umgebung von this_object() die Funktion
+        id(str) aus, bis ein Treffer erzielt wird (wenn ueberhaupt).
+
+        Ist <n> nicht gegeben, aber <str> hat die Form "<id> <n>" , wird
+        ebenfalls das n-te Objekt mit Namen <id> zurueckgeliefert.
 
         Es ist: id(str) { return str == <name>; }
 
@@ -39,6 +45,19 @@ ANMERKUNG
         Wenn das n-te Objekt <str> in this_object() UND in der Umgebung von
         this_object() gefunden wird, so liefert present() das n-te Objekt aus
         der Umgebung, nicht beide.
+
+BEISPIELE
+        present("chest");
+          --> findet das erste 'chest' Objekt
+
+        present("chest 2");
+          --> findet das zweite 'chest' Objekt
+
+        present("chest 2", 1);
+          --> findet das erste 'chest 2' Objekt
+
+HISTORY
+        LDMud 3.2.11/3.3.610 fuehrte die (str, n)-Form ein.
 
 SIEHE AUCH
         move_object(E), environment(E), this_object(E), present_clone(E),
