@@ -60,17 +60,16 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 609)
-(Parent-Version lpmud 3-3 608)
+(Project-Version lpmud 3-3 610)
+(Parent-Version lpmud 3-3 609)
 (Version-Log "
-  - (smalloc.c) Ok, ordering the small block freelists was a bad idea - I
-      removed that now. Ordering the large block freelists doesn't seem
-      to make a performance difference, so I keep it in for now.
+  - (func_spec, object.c) Introduced the (str, n) form for efun present()
+    (Bug #0000134).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Tue, 26 Oct 2004 21:41:15 -0600")
+(Checkin-Time "Sat, 30 Oct 2004 23:57:02 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -108,8 +107,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.672 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.379 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.673 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.380 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -217,7 +216,7 @@
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.2 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.6 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.50 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.51 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.8 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -365,7 +364,7 @@
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.5 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.38 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.39 644))
   (src/string_spec (lpmud/f/6_string_spe 1.14.1.17 644))
   (src/mkfunc.c (lpmud/l/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.30.1.12 644))
@@ -1205,7 +1204,7 @@
   (doc/efun/pg_close (lpmud/d/b/47_pg_close 1.1 644))
   (doc/efun/pointerp (lpmud/p/20_pointerp 1.4 644))
   (doc/efun/pow (lpmud/c/46_pow 1.1.1.3 644))
-  (doc/efun/present (lpmud/p/21_present 1.4 644))
+  (doc/efun/present (lpmud/p/21_present 1.5 644))
   (doc/efun/present_clone (lpmud/t/11_present_cl 1.4 644))
   (doc/efun/previous_object (lpmud/l/34_previous_o 1.3.1.7 644))
   (doc/efun/printf (lpmud/p/22_printf 1.4 644))
@@ -1480,7 +1479,7 @@
   (doc/efun.de/printf.de (lpmud/h/b/21_printf.de 1.1 640))
   (doc/efun.de/previous_object.de (lpmud/h/b/22_previous_o 1.3 640))
   (doc/efun.de/present_clone.de (lpmud/h/b/23_present_cl 1.1 640))
-  (doc/efun.de/present.de (lpmud/h/b/24_present.de 1.1 640))
+  (doc/efun.de/present.de (lpmud/h/b/24_present.de 1.2 640))
   (doc/efun.de/pow.de (lpmud/h/b/25_pow.de 1.1 640))
   (doc/efun.de/pointerp.de (lpmud/t/3_pointerp.d 1.1 644))
   (doc/efun.de/order_alist.de (lpmud/h/b/26_order_alis 1.2 640))
