@@ -175,11 +175,13 @@ For a detailed list of all changes see the file CHANGELOG.
            x509 key- and certfile for the TLS package.
 
 
-11-Sep-2004 (Lars Duening) -- Release 3.2.11
+30-Oct-2004 (Lars Duening) -- Release 3.2.11
 
     - Changed efuns:
        + input_to(): New flag INPUT_NO_TELNET to modify the INPUT_CHARMODE
            behaviour.
+       + present(): The argument form (str, n) allows for ids with embedded
+           numbers.
        + shutdown(): Added an argument to set the process exit code.
 
     - Corrected efuns:
